  * Silent source-contains-prebuilt-windows-binary
  * Silent executable-not-elf-or-script
    usr/lib/llvm-8/share/clang/bash-autocomplete.sh
  * Remove unapplied patches:
    - D52340-rustc-debuginfo.diff
    - D54379-hurd-triple-clang.diff
    - hurd-cxx-paths.diff
    - openmp-jessie-missing-include.diff
    - rustc-aarch64-test-failure.diff
    - strip-ignore-deterministic-archives.diff

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 17 Jan 2019 10:23:10 +0100

llvm-toolchain-8 (1:8~svn351401-1~exp1) experimental; urgency=medium

  * New snapshot release (branch 8 created)
  * Silent a source lintian warning
    source: source-is-missing
    lldb/lit/Modules/ELF/Inputs/PT_LOAD-overlap-section.elf
  * Revert patch D55434 as it is breaking the build on old version of
    debian/ubuntu
  * Remove BugpointPasses.so & TestPlugin.so as they don't ship anymore

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 17 Jan 2019 08:24:19 +0100

llvm-toolchain-8 (1:8~svn350834-1~exp2) UNRELEASED; urgency=medium

  * Remove patch D55434-revert.diff as the regression has been fixed upstream

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 17 Jan 2019 09:16:03 +0100

llvm-toolchain-snapshot (1:8~svn348749-1~exp2) experimental; urgency=medium

  * New symbols in openmp:
    - OMP_NULL_ALLOCATOR
    - __kmpc_alloc
    - __kmpc_free
    - __kmpc_get_default_allocator
    - __kmpc_omp_reg_task_with_affinity
    - __kmpc_set_default_allocator
    - omp_alloc
    - omp_capture_affinity
    - omp_cgroup_mem_alloc
    - omp_const_mem_alloc
    - omp_default_mem_alloc
    - omp_display_affinity
    - omp_free
    - omp_get_affinity_format
    - omp_get_default_allocator
    - omp_high_bw_mem_alloc
    - omp_large_cap_mem_alloc
    - omp_low_lat_mem_alloc
    - omp_pteam_mem_alloc
    - omp_set_affinity_format
    - omp_set_default_allocator
    - omp_thread_mem_alloc
    - ompc_capture_affinity
    - ompc_display_affinity
    - ompc_get_affinity_format
    - ompc_set_affinity_format
